# knowledge-base

./: .env.example  .gitignore  .models_available_gemini.md  architecture.mermaid  clear_cache.py  interlink.py  main.py  pyproject.toml
src/core/domain/: note.py
src/core/interfaces/: ports.py
src/core/services/: dedup_service.py  interlink_prompts.py  interlink_service.py
src/infrastructure/embedding/: local_embedder.py
src/infrastructure/llm/: gemini_provider.py  ollama_provider.py
src/infrastructure/storage/: chroma_store.py  fs_repo.py  sqlite_index.py
tests/: test_dedup.py
